<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:background="@color/bg_color">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:rowCount="8"
        android:background="@drawable/layout_rectangle"
        android:padding="3dp"
        android:layout_margin="10dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Enter your information"
            android:id="@+id/infoLabel"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnSpan="2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_Label"
            android:id="@+id/nameLabel"
            android:layout_row="2"
            android:layout_column="0"
            android:textStyle="bold"
            android:textSize="16dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/userNameInput"
            android:layout_row="2"
            android:layout_column="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender_Label"
            android:id="@+id/genderLabel"
            android:layout_row="3"
            android:layout_column="0"
            android:textStyle="bold"
            android:textSize="16dp" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="1"
            android:orientation="horizontal"
            android:id="@+id/genderRadioGroup">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:text="M"
                android:id="@+id/maleRadioButton"
                android:layout_gravity="right"
                android:checked="true"
                android:onClick="selectGender"
                android:width="80dp"
                android:height="10dp"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:text="F"

                android:id="@+id/famaleRadioButton"
                android:checked="false"
                android:onClick="selectGender" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age_Label"
            android:id="@+id/ageLabel"
            android:layout_row="4"
            android:layout_column="0"
            android:textStyle="bold"
            android:textSize="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="18"
            android:id="@+id/userAgeInput"
            android:layout_row="4"
            android:layout_column="1"
            android:textSize="16dp"
            android:layout_marginLeft="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/height_Label"
            android:id="@+id/heightLabel"
            android:layout_row="5"
            android:layout_column="0"
            android:textStyle="bold"
            android:textSize="16dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/userHeightInput"
            android:layout_row="5"
            android:layout_column="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight_Label"
            android:id="@+id/weightLabel"
            android:layout_row="6"
            android:layout_column="0"
            android:textStyle="bold"
            android:textSize="16dp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/userWeightInput"
            android:layout_row="6"
            android:layout_column="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_user_info_button"
            android:id="@+id/saveUserInfoButton"
            android:layout_row="7"
            android:layout_column="1"
            android:onClick="saveOnClick"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_gravity="right" />
    </GridLayout>
</LinearLayout>