<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@color/bg_color"
    android:weightSum="1">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/layout_rectangle"
        android:padding="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="20dp" >

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/step_message"
                android:id="@+id/textView"
                android:layout_alignParentTop="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Large Text"
                android:id="@+id/text_step"
                android:layout_toEndOf="@+id/textView"
                android:layout_alignTop="@+id/textView"
                android:layout_above="@+id/text_targetStep" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Large Text"
            android:id="@+id/text_targetStep"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/textView"
            android:layout_alignStart="@+id/textView" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_button"
        android:id="@+id/button_step"
        android:layout_below="@+id/text_targetStep"
        android:layout_gravity="center_horizontal"
        android:onClick="openStepRecord"
        android:layout_marginTop="50dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_set_plan"
        android:id="@+id/button_fitness"
        android:layout_alignBottom="@+id/text_targetStep"
        android:layout_gravity="center_horizontal"
        android:onClick="openFitnessPlan"
        android:layout_marginTop="30dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.27" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="view chart(test function)"
        android:id="@+id/button"
        android:layout_gravity="center_horizontal"
        android:onClick="openStepChart" />

</LinearLayout>
